--- a/table.html
+++ b/table.html
@@ -1,26 +1,28 @@
-<div class="pseo-table">
-  <div>
-    <span class="pad5">The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software.</span>
-    <span class="pad5">
-      The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software.
-</span>
+<body>
+  <style>
+  .pseo-table { display: table }
+  .pseo-table div { display: table-row }
+  .pseo-table span { display: table-cell; vertical-align: top }
+  .pad5 { padding: 5px }
+  body { max-width: 700px }
+  </style>
+  <div class="pseo-table">
+    <div>
+      <span class="pad5">The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software.</span>
+      <span class="pad5">
+        The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software.
+  </span>
+    </div>
   </div>
-</div>
 
-<div class="pseo-table">
-  <div>
-    <span class="pad5" style="width: 80px">
-      <img width="80xp" src="https://s3-ap-northeast-1.amazonaws.com/creww/uploads/accounts/logos/b6630b06-2aa4-45c2-a3cc-27d3f7e915be.png">
-    </span>
-    <span class="pad5">
-      The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're...
-</span>
+  <div class="pseo-table">
+    <div>
+      <span class="pad5" style="width: 80px">
+        <img width="80px" src="https://s3-ap-northeast-1.amazonaws.com/creww/uploads/accounts/logos/b6630b06-2aa4-45c2-a3cc-27d3f7e915be.png">
+      </span>
+      <span class="pad5">
+        The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're going to look at how to use them, when to use them, and everything else you need to know.The element in HTML is used for displaying tabular data. You can think of it as a way to describe and display data that would make sense in spreadsheet software. Essentially: columns and rows. In this article we're...
+  </span>
+    </div>
   </div>
-</div>
-
-<style>
-.pseo-table { display: table }
-.pseo-table div { display: table-row }
-.pseo-table span { display: table-cell; vertical-align: top }
-.pad5 { padding: 5px }
-</style>
+</body>
